<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="MOBAPP"
        app:titleTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="85dp"
        android:text="@string/label_nom"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/hint_nom"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/label_prenom"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:hint="@string/hint_prenom"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_date_naissance"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/hint_date_naissance"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_ville_naissance"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/hint_ville_naissance"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_dep"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <Spinner
        android:id="@+id/department"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="29dp"
        android:entries="@array/departments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_phone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="356dp"
        android:layout_height="47dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="49dp"
        android:digits="0123456789+"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ScrollView
        android:id="@+id/phoneList"
        android:layout_width="356dp"
        android:layout_height="80dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7">

        <LinearLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:text="@string/btn_valider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneList" />

</androidx.constraintlayout.widget.ConstraintLayout>