<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/hint_nom"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="211dp"
        android:text="@string/label_ville_naissance"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="354dp"
        android:text="@string/label_nom"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="354dp"
        android:text="@string/label_prenom"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/hint_ville_naissance"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="266dp"
        android:text="@string/label_date_naissance"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <Button
        android:id="@+id/button"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="96dp"
        android:onClick="validateAction"
        android:text="@string/btn_valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneList" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/hint_date_naissance"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:hint="@string/hint_prenom"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="183dp"
        android:text="@string/label_phone"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="356dp"
        android:layout_height="47dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="49dp"
        android:digits="0123456789+"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/phoneList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ScrollView
        android:id="@+id/phoneList"
        android:layout_width="356dp"
        android:layout_height="80dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7">

        <LinearLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Spinner
        android:id="@+id/department"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="29dp"
        android:entries="@array/departments"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="173dp"
        android:text="@string/label_dep"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/department"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6"
        app:layout_constraintVertical_bias="0.512" />

</androidx.constraintlayout.widget.ConstraintLayout>