<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/date"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateFragment">

    <TextView
        android:id="@+id/displayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/datePicked"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/abandon"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_abandon"
        android:onClick="abandon"
        app:layout_constraintEnd_toStartOf="@+id/validate"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayDate" />

    <Button
        android:id="@+id/validate"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/btn_valider"
        android:onClick="validate"
        app:layout_constraintBottom_toBottomOf="@+id/abandon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/abandon"
        app:layout_constraintTop_toTopOf="@+id/abandon" />

</androidx.constraintlayout.widget.ConstraintLayout>